// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OverlayAlertComponent matches snapshot when type is "approved" 1`] = `""`;

exports[`OverlayAlertComponent matches snapshot when type is "closed" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--closed"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <ClosedAlert
        bidIdUrl="/profile/bidtracker/3"
        date="2017-12-20"
        title="POLITICAL/ECONOMIC OFFICER (10035561)"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "declined" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--closed"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <DeclinedAlert
        bidIdUrl="/profile/bidtracker/3"
        bureau="(AF) BUREAU OF AFRICAN AFFAIRS"
        id={3}
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "draft" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--draft"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <DraftAlert
        bid={
          Object {
            "approved_date": "2017-12-20",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 3,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position_info": Object {
              "bid_statistics": Array [
                Object {
                  "at_skill": 0,
                  "has_handshake_accepted": null,
                  "has_handshake_offered": false,
                  "id": null,
                  "in_grade": 0,
                  "in_grade_at_skill": 0,
                  "total_bids": 0,
                },
              ],
              "bidcycle": Object {
                "name": "Demo BidCycle 2017-10-31 16:00:51.254762",
              },
              "id": 11,
              "position": Object {
                "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
                "create_date": "2015-08-05",
                "grade": "03",
                "position_number": "10035561",
                "post": Object {
                  "id": 199,
                  "location": Object {
                    "city": "Freetown",
                    "code": "00A",
                    "country": "Sierra Leone",
                    "id": 103,
                    "state": "",
                  },
                },
                "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
                "title": "POLITICAL/ECONOMIC OFFICER",
                "update_date": "2017-06-08",
              },
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "draft",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          }
        }
        submitBid={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "fake prop" 1`] = `""`;

exports[`OverlayAlertComponent matches snapshot when type is "handshake_declined" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--closed"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <HandshakeDeclinedAlert
        bidIdUrl="/profile/bidtracker/3"
        bureau="(AF) BUREAU OF AFRICAN AFFAIRS"
        userName="rehmant"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "handshake_needs_registered" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--register"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <HandshakeRegisterAlert
        bid={
          Object {
            "approved_date": "2017-12-20",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 3,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position_info": Object {
              "bid_statistics": Array [
                Object {
                  "at_skill": 0,
                  "has_handshake_accepted": null,
                  "has_handshake_offered": false,
                  "id": null,
                  "in_grade": 0,
                  "in_grade_at_skill": 0,
                  "total_bids": 0,
                },
              ],
              "bidcycle": Object {
                "name": "Demo BidCycle 2017-10-31 16:00:51.254762",
              },
              "id": 11,
              "position": Object {
                "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
                "create_date": "2015-08-05",
                "grade": "03",
                "position_number": "10035561",
                "post": Object {
                  "id": 199,
                  "location": Object {
                    "city": "Freetown",
                    "code": "00A",
                    "country": "Sierra Leone",
                    "id": 103,
                    "state": "",
                  },
                },
                "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
                "title": "POLITICAL/ECONOMIC OFFICER",
                "update_date": "2017-06-08",
              },
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "handshake_needs_registered",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          }
        }
        isUnregister={false}
        registerHandshake={[Function]}
        unregisterHandshake={[Function]}
        userName=""
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "handshake_offered" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--pending"
>
  <div
    className=""
  >
    <div
      className=""
    >
      <Connect(HandshakeOfferedAlert)
        bid={
          Object {
            "approved_date": "2017-12-20",
            "closed_date": "2017-12-20",
            "create_date": "2017-12-20",
            "declined_date": "2017-12-20",
            "draft_date": "2017-12-20",
            "handshake_accepted_date": "2017-12-20",
            "handshake_declined_date": "2017-12-20",
            "handshake_offered_date": "2017-12-20",
            "id": 3,
            "in_panel_date": "2017-12-20",
            "is_priority": false,
            "position_info": Object {
              "bid_statistics": Array [
                Object {
                  "at_skill": 0,
                  "has_handshake_accepted": null,
                  "has_handshake_offered": false,
                  "id": null,
                  "in_grade": 0,
                  "in_grade_at_skill": 0,
                  "total_bids": 0,
                },
              ],
              "bidcycle": Object {
                "name": "Demo BidCycle 2017-10-31 16:00:51.254762",
              },
              "id": 11,
              "position": Object {
                "bureau": "(AF) BUREAU OF AFRICAN AFFAIRS",
                "create_date": "2015-08-05",
                "grade": "03",
                "position_number": "10035561",
                "post": Object {
                  "id": 199,
                  "location": Object {
                    "city": "Freetown",
                    "code": "00A",
                    "country": "Sierra Leone",
                    "id": 103,
                    "state": "",
                  },
                },
                "skill": "POLITICAL AND ECONOMIC AFFAIRS (6050)",
                "title": "POLITICAL/ECONOMIC OFFICER",
                "update_date": "2017-06-08",
              },
            },
            "reviewer": Object {
              "email": "woodwardw@state.gov",
              "first_name": "Wendy",
              "is_cdo": false,
              "last_name": "Woodward",
              "phone_number": "555-555-5555",
              "username": "woodwardw",
            },
            "scheduled_panel_date": "2017-12-20",
            "status": "handshake_offered",
            "submitted_date": "2017-12-20",
            "update_date": "2017-12-20",
            "user": "rehmant",
          }
        }
        bidIdUrl="/profile/bidtracker/3"
        cdoView={false}
        id={3}
        userName=""
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "in_panel" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--pending"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <InPanelAlert
        date="2017-12-20"
        title="POLITICAL/ECONOMIC OFFICER (10035561)"
      />
    </div>
  </div>
</div>
`;

exports[`OverlayAlertComponent matches snapshot when type is "panel_rescheduled" 1`] = `
<div
  className="bid-tracker-overlay-alert bid-tracker-overlay-alert--pending"
>
  <div
    className="bid-tracker-overlay-alert-content-container"
  >
    <div
      className="bid-tracker-overlay-alert-content"
    >
      <PanelRescheduledAlert
        date="2017-12-20"
      />
    </div>
  </div>
</div>
`;
